# 2022-cpl-coding

./: CMakeLists.txt  LICENSE  README.md  guess.c
0-intro/: CMakeLists.txt  hello.c
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere.c
10-double-pointers/: CMakeLists.txt  decl.c  echo.c  integrate .c  selection-sort-2.c  sort.c
2-if-for-array/: CMakeLists.txt  leap-if-else.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  binary-search.c  ceshi.c  digits.c  palindrome.c  primes.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  game-of-life-1.c  game-of-life.c  merge.c
5-function/: CMakeLists.txt  binary-search-1.c  game-of-life-transformed.c  leap.c  palindrome-1.c  primes-1.c  selection-sort-1.c  stars-1.c
6-recursion/: CMakeLists.txt  bsearch-re.c  fib-re.c  gcd-euclidean-re.c  min-re.c  sum-re.c
7-data-types/: mergesort.c
8-pointers/: selection-sort.c
9-pointers-c-strings/: CMakeLists.txt  strcpy.c  strlen.c
